--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 </head>
 <body>
     <div class="container">
-        HELLO WORLD
+        <div class="title">TIC TAC TOE</div>
+        <div id="board">
+            <div class="slot" id="slot1"></div>
+            <div class="slot" id="slot2"></div>
+            <div class="slot" id="slot3"></div>
+            <div class="slot" id="slot4"></div>
+            <div class="slot" id="slot5"></div>
+            <div class="slot" id="slot6"></div>
+            <div class="slot" id="slot7"></div>
+            <div class="slot" id="slot8"></div>
+            <div class="slot" id="slot9"></div>
+        </div>
+        <div id="turn-indicator">Current turn:  </div>
     </div>
 </body>
 <script src="scripts.js"></script>
