Add full game functionality

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             <div class="slot" id="slot9"></div>
         </div>
         <div id="turn-indicator">Current turn:  </div>
+        <div id="postgame-win">
+            <div id="winmsg"><span id="winner" style="color: red">O</span> HAS WON!</div>
+            <button class="play-again">Play again?</button>
+        </div>
+        <div id="postgame-draw">
+            <div id="drawmsg">DRAW!</div>
+            <button class="play-again">Play again?</button>
+        </div>
     </div>
 </body>
 <script src="scripts.js"></script>
